fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,10 @@ body {
     padding: 0 25px;
 }
 
+.align-left {
+    text-align: start;
+}
+
 .ingredients-input {
     border: none;
     border-radius: 5px;
@@ -288,5 +292,10 @@ details[open] {
     .recipe {
         font-size: 1rem;
         padding: 20px;
+    }
+
+    .align-left {
+        text-align: start;
+        padding: 10px;
     }
 }
